# EasyGen

./: CMakeLists.txt  README.md  vcpkg.json
cmake/: ListCombinations.cmake
easygen/: AbstractGenerator.hpp  ConfigLoader.hpp  DataModelDescription.hpp  DataTypeBasic.hpp  Factory.hpp  Forwards.hpp  Helper.hpp  Labels.hpp  MsgPackGenerator.cpp  PropertyDescription.hpp  YamlDeserializationHelper.hpp
easygen/generators/: MsgPackCppGenerator.hpp
share/example/: test.yaml
share/templates/DtoMsgPack/: CMakeLists.template  IBaseSerializerHpp.template  ModelCpp.template  ModelHpp.template
src/: AbstractGenerator.cpp  ConfigLoader.cpp  DataModelDescription.cpp  main.cpp
src/generators/: MsgPackCppGenerator.cpp
